# cloud-computing-2021

./: Dockerfile  README.md  Vagrantfile  install_docker.sh  install_docker_compose_vagrant.sh  pyproject.toml  run_project_vagrant.sh
.github/workflows/: deploy_docker_image.yml  main.yml
cloud_project/: db.sqlite3
cloud_project/cloud_project/: settings.py  urls.py
cloud_project/counter/: models.py  views.py
cloud_project/worker/: models.py  views.py
compose_cloud_project/: docker-compose.yml
django_cloud_proj_16_11/: manage.py
django_cloud_proj_16_11/django_cloud_proj_16_11/: asgi.py  settings.py  urls.py  wsgi.py
django_cloud_proj_16_11/zaposleni/: admin.py  apps.py  models.py  serializers.py  views.py
django_cloud_proj_16_11/zaposleni/migrations/: 0001_initial.py
nginx/: nginx.conf
web_app/: Dockerfile  pyproject.toml  run_server.sh
web_app/cloud_project/cloud_project/: settings.py
web_app/cloud_project/counter/: serializers.py
web_app/cloud_project/counter/migrations/: 0001_initial.py
web_app/cloud_project/worker/: serializers.py
web_app/cloud_project/worker/migrations/: 0001_initial.py
